--- a/templates/dri.html
+++ b/templates/dri.html
@@ -18,14 +18,9 @@
                 value="{{ nutrient['DRI'] }}"
         ></td>
         <td><label for="{{ nutrient['NutrientID'] }}">
-            {{ nutrient['NutrientUnit'] }} {{ nutrient['NutrientName'] }}</label></td>
+            {{ nutrient['NutrientUnit'] }} {{ nutrient['NutrientName'] }} {{ nutrient['NutrientID'] }}</label></td>
         </tr>
     {% endfor %}
     </table>
-{#    <label for="username">Username</label>#}
-{#    <input name="username" id="username" required>#}
-{#    <label for="password">Password</label>#}
-{#    <input type="password" name="password" id="password" required>#}
-{#    <input type="submit" value="Log In">#}
   </form>
 {% endblock %}
