added database file, eaten food view shows nutrients and allows to delete eaten food

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 {% endblock %}
 <title>{% block title %}{% endblock %} - FoodCalc</title>
 </head>
-{#<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">#}
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
     <h1>FoodCalc</h1>
     <ul>
