corrected the table styling in the eaten_food.html

--- a/templates/eaten_food.html
+++ b/templates/eaten_food.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    <div> {#class="container">#}
+{#    <div> {#class="container">#}
     <table>
     <thead>
     <tr><th>FoodID Click on button below to remove entry<th>Food name<th>Grams<th>Date of Consumption
@@ -45,5 +45,5 @@
     </tr>
     </tbody>
     </table>
-    </div>
+{#    </div>#}
 {% endblock %}
