--- a/static/style.css
+++ b/static/style.css
@@ -16,8 +16,10 @@
 /* Use overflow:scroll on your container to enable scrolling: */
 
 div {
-  max-width: 400px;
-  max-height: 150px;
+  /*max-width: 400px;*/
+  /*max-height: 150px;*/
+  width: 100%;
+  height: 100%;
   overflow: scroll;
 }
 
